Fix T40411: UI incorrectly permits changing materal_slots on linked obdata